@@ -1,0 +1,4 @@
+Defines new notions of prototype and size that are used to provide
+tools for consistent and well-founded type-coercion and
+size-recycling, and are in turn connected to ideas of type- and
+size-stability useful for analyzing function interfaces.
