@@ -1,0 +1,23 @@
+# $NetBSD: Makefile,v 1.1 2019/07/31 13:33:31 brook Exp $
+
+CATEGORIES=	math R
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	${R_HOMEPAGE_BASE}/vctrs/
+COMMENT=	Vector helpers
+LICENSE=	gnu-gpl-v3
+
+R_PKGNAME=	vctrs
+R_PKGVER=	0.2.0
+
+DEPENDS+=	R-glue>=1.3.1:../../devel/R-glue
+DEPENDS+=	R-rlang>=0.4.0:../../devel/R-rlang
+DEPENDS+=	R-backports>=1.1.4:../../math/R-backports
+DEPENDS+=	R-ellipsis>=0.2.0:../../math/R-ellipsis
+DEPENDS+=	R-zeallot>=0.1.0:../../math/R-zeallot
+DEPENDS+=	R-digest>=0.6.20:../../security/R-digest
+
+USE_LANGUAGES=	c
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
